objects/echosign_dev1__Attachment_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
        <relationshipName>Attachment_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Document_Names__c</fullName>
        <label>Attachment Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Document__c</fullName>
        <label>Attachment Document ID&apos;s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Selection_Field__c</fullName>
        <label>Selection Determined By</label>
        <picklist>
            <picklistValues>
                <fullName>Last Modified Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Selection_Type__c</fullName>
        <label>File Selection from Master Object</label>
        <picklist>
            <picklistValues>
                <fullName>Latest Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Oldest Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Document_Selection_Field__c</fullName>
        <label>Quote Document Selection Determined By</label>
        <picklist>
            <picklistValues>
                <fullName>Last Modified Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Document_Selection_Type__c</fullName>
        <label>Quote Document Selection from Quote</label>
        <picklist>
            <picklistValues>
                <fullName>Latest Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Oldest Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Selection_Field__c</fullName>
        <label>Quote Selection Determined By</label>
        <picklist>
            <picklistValues>
                <fullName>Last Modified Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Selection_Type__c</fullName>
        <label>Quote Selection from Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Latest Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oldest Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Recipient_Relationship__c</fullName>
        <label>Related Recipient Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Field__c</fullName>
        <label>Related Selection Field</label>
        <picklist>
            <picklistValues>
                <fullName>Last Modified Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Type__c</fullName>
        <label>Related Selection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Latest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Oldest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Attachment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document from Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document from EchoSign Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document from Library</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Document from Master Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Document from Master Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Document from Opportunity Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Runtime Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Variable_Name__c</fullName>
        <label>Variable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add File Attachment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Attachment Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add File Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>